--- a/version 2/quizproject.css
+++ b/version 2/quizproject.css
@@ -64,8 +64,6 @@ h1 {
 }
 
 img {
-	width: auto;
-	height: auto;
 	max-width: 60vw;
 	max-height: 50vh;
 }
@@ -117,8 +115,8 @@ img {
 }
 
 #b {
-	background-color: #E6AC00;
-	box-shadow: 5px 5px #B67C00;
+	background-color: #dd7808;
+	box-shadow: 5px 5px #Bd5000;
 }
 
 #c {
@@ -127,7 +125,7 @@ img {
 }
 
 #d {
-	background-color: blue;
+	background-color: #2929dd;
 	box-shadow: 5px 5px #00a;
 }
 
