--- a/quizproject.css
+++ b/quizproject.css
@@ -167,7 +167,7 @@ img {
 	text-align: center;
 	font-size: 2.5em;
 	font-weight: bold;
-	background-color: #aaa;
+	background-color: purple;
 	border-radius: 25px 25px 0 0;
 }
 
